# flatpak-sample-authenticator

./: .gitignore  Makefile.am  Makefile.am.inc  README.md  auth-utils.c  auth-utils.h  configure.ac  flatpak-authenticator-webflow.c  flatpak-authenticator-webflow.h  flatpak-authenticator.c  flatpak-authenticator.service.in  flatpak-sample-authenticator.service.in  org.flatpak.Authenticator.Sample.json  org.flatpak.Authenticator.Sample.service.in  org.flatpak.Authenticator.service.in  sample-authenticator.c
